build-storybook.log
yarn run v1.22.19
$ storybook build --output-dir /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--17251-h5LwsBl35229
@storybook/cli v7.6.16

info => Cleaning outputDir: /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--17251-h5LwsBl35229
info => Loading presets
info => Building manager..
info => Manager built (87 ms)
info => Building preview..
info => Copying static files: /Users/persoonlijk/learnstorybook-design-system/node_modules/@storybook/manager/static at /var/folders/3_/3y84r1fj36gdn05mq4c_z9s40000gp/T/chromatic--17251-h5LwsBl35229/sb-common-assets
vite v4.5.2 building for production...

./sb-common-assets/fonts.css doesn't exist at build time, it will remain unchanged to be resolved at runtime
transforming...
✓ 88 modules transformed.
✓ built in 1.45s
[storybook:react-docgen-plugin] /Users/persoonlijk/learnstorybook-design-system/src/Dialog/Dialog.jsx: Identifier 'Dialog' has already been declared. (12:7)

  10 | import ListItemText from '@mui/material/ListItemText';
  11 | import DialogTitle from '@mui/material/DialogTitle';
> 12 | import Dialog from '@mui/material/Dialog';
     |        ^
  13 | import PersonIcon from '@mui/icons-material/Person';
  14 | import AddIcon from '@mui/icons-material/Add';
  15 | import Typography from '@mui/material/Typography';
file: /Users/persoonlijk/learnstorybook-design-system/src/Dialog/Dialog.jsx:12:7
=> Failed to build the preview
SyntaxError: ./src/Dialog/Dialog.jsx: Identifier 'Dialog' has already been declared. (12:7)

  10 | import ListItemText from '@mui/material/ListItemText';
  11 | import DialogTitle from '@mui/material/DialogTitle';
> 12 | import Dialog from '@mui/material/Dialog';
     |        ^
  13 | import PersonIcon from '@mui/icons-material/Person';
  14 | import AddIcon from '@mui/icons-material/Add';
  15 | import Typography from '@mui/material/Typography';
    at constructor (./node_modules/@babel/parser/lib/index.js:353:19)
    at JSXParserMixin.raise (./node_modules/@babel/parser/lib/index.js:3277:19)
    at ScopeHandler.checkRedeclarationInScope (./node_modules/@babel/parser/lib/index.js:1491:19)
    at ScopeHandler.declareName (./node_modules/@babel/parser/lib/index.js:1457:12)
    at JSXParserMixin.declareNameFromIdentifier (./node_modules/@babel/parser/lib/index.js:7348:16)
    at JSXParserMixin.checkIdentifier (./node_modules/@babel/parser/lib/index.js:7344:12)
    at JSXParserMixin.checkLVal (./node_modules/@babel/parser/lib/index.js:7290:12)
    at JSXParserMixin.finishImportSpecifier (./node_modules/@babel/parser/lib/index.js:13707:10)
    at JSXParserMixin.parseImportSpecifierLocal (./node_modules/@babel/parser/lib/index.js:13704:31)
    at JSXParserMixin.maybeParseDefaultImportSpecifier (./node_modules/@babel/parser/lib/index.js:13818:12)
    at JSXParserMixin.parseImportSpecifiersAndAfter (./node_modules/@babel/parser/lib/index.js:13681:29)
    at JSXParserMixin.parseImport (./node_modules/@babel/parser/lib/index.js:13677:17)
    at JSXParserMixin.parseStatementContent (./node_modules/@babel/parser/lib/index.js:12337:27)
    at JSXParserMixin.parseStatementLike (./node_modules/@babel/parser/lib/index.js:12229:17)
    at JSXParserMixin.parseModuleItem (./node_modules/@babel/parser/lib/index.js:12206:17)
    at JSXParserMixin.parseBlockOrModuleBlockBody (./node_modules/@babel/parser/lib/index.js:12786:36)
    at JSXParserMixin.parseBlockBody (./node_modules/@babel/parser/lib/index.js:12779:10)
    at JSXParserMixin.parseProgram (./node_modules/@babel/parser/lib/index.js:12106:10)
    at JSXParserMixin.parseTopLevel (./node_modules/@babel/parser/lib/index.js:12096:25)
    at JSXParserMixin.parse (./node_modules/@babel/parser/lib/index.js:13895:10)
    at parse (./node_modules/@babel/parser/lib/index.js:13916:26)
    at parser (./node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at parse (./node_modules/@babel/core/lib/parse.js:25:37)
    at parse.next (<anonymous>)
    at evaluateSync (./node_modules/gensync/index.js:251:28)
    at sync (./node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (./node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at parseSync (./node_modules/@babel/core/lib/parse.js:40:72)
    at babelParser (./node_modules/react-docgen/dist/babelParser.js:78:41)
    at parse (./node_modules/react-docgen/dist/parse.js:51:46)
    at defaultParse (./node_modules/react-docgen/dist/main.js:55:35)
    at Object.transform (./node_modules/@storybook/react-vite/dist/preset.js:1:2727)
    at file://./node_modules/rollup/dist/es/shared/node-entry.js:25544:40
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
